--- a/src/app/pages/communyts/communyts.component.html
+++ b/src/app/pages/communyts/communyts.component.html
@@ -11,11 +11,154 @@
         </div>
     </div>
 </section>
-<section style="display: block; margin-top: 50px; margin-bottom: 50px;">
+<section id="service" class="service" style="padding-bottom:50px;">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12">
-				<div id="mapdiv" style="width: 100%; height: 600px;"></div>
+				<div class="main_service_area">
+					<div class="main_service_content">
+						<div class="service_tabe">
+							<!-- Nav tabs -->
+							<ul class="service_tabe_menu nav nav-tabs" role="tablist">
+								<li role="presentation" class="active">
+									<a href="#concilia-aba" aria-controls="concilia-aba" role="tab" data-toggle="tab">
+										<i class="fa fa-home" aria-hidden="true"></i><br />
+										VILA<br> BOM DESTINO
+									</a>
+								</li>
+								<li role="presentation">
+									<a href="#rodovias-aba" aria-controls="rodovias-aba" role="tab" data-toggle="tab">
+										<i class="fa fa-map-marker"></i> <br />
+										VILA <br>DA LUZ
+									</a>
+								</li>
+								<li role="presentation">
+									<a href="#programa-aba" aria-controls="programa-aba" role="tab" data-toggle="tab">
+										<i class="fa fa-th-list" aria-hidden="true"></i> <br />
+										VILA <br>DA PAZ
+									</a>
+								</li>
+								<li role="presentation">
+									<a href="#reassentamento-aba" aria-controls="reassentamento-aba" role="tab" data-toggle="tab">
+										<i class="fa fa-location-arrow" aria-hidden="true"></i> <br />
+										VILA <br> PICA PAU
+									</a>
+								</li>
+
+							</ul>
+
+							<!-- Tab panes -->
+							<div class="tab-content" style="margin-top: 50px;">
+								<div role="tabpanel" class="tab-pane active" id="concilia-aba">
+									<div class="single_service_tab">
+										<div class="row">
+											<div class="head_title" style="margin-bottom: 10px;">
+												<h3 class="font2-3">VILA BOM DESTINO</h3>
+												<div class="separator"></div>
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-sm-6">
+												<div class="single_tab_content">
+													<p style="font-size: 1.24rem;">A comunidade Bom Destino pertence ao município de Santa Luzia, na Grande BH. É um dos bairros mais isolados do município, a cerca de 20 Km  do centro da cidade. O bairro é dividido em duas seções e é cortado pela BR-381.  Seu acesso rodoviário é feito por Sabará. Segundo a Fundação João Pinheiro e o Instituto de Pesquisa Econômica Aplicada, o bairro está entre os oito com o menor Índice de Desenvolvimento Humano Municipal (IDHM) da região metropolitana. Em escala que vai de 0 a 1 (do pior para o melhor), o IDHM é de 0,597, o que corresponde ao nível “baixo” de desenvolvimento humano.</p>
+												</div>
+											</div>
+
+											<div class="col-sm-6">
+												<div class="single_tab_img">
+													<img src="assets/images/banco-imoveis.jpg" alt="" />
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div role="tabpanel" class="tab-pane" id="rodovias-aba">
+									<div class="single_service_tab">
+										<div class="row">
+											<div class="head_title" style="margin-bottom: 10px;">
+												<h3 class="font2-3">VILA DA LUZ</h3>
+												<div class="separator"></div>
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-sm-6">
+												<div class="single_tab_content">
+
+													<p style="font-size: 1.24rem;">A vila da Luz está localizada no final do Anel Rodoviário, que é uma das vias mais movimentadas de Belo Horizonte, entre as rodovias BR-262 e BR-381.  Começou a ser ocupada no final dos anos de 1980 e estima-se que, em 2014,  em torno de 600 famílias viviam no local. Sem qualquer infraestrutura, muitas das  casas de alvenaria e madeira da vila da Luz foram erguidas sobre caixas de passagem de cabos de eletricidade da Cemig. O amontoado de moradias improvisadas desenha becos que desembocam em um córrego poluído.  Além disso, ocuparam áreas às margens das rodovias.</p>
+												</div>
+											</div>
+
+											<div class="col-sm-6">
+												<div class="single_tab_img">
+													<img src="assets/images/featureslid1.jpg" alt="" />
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div role="tabpanel" class="tab-pane" id="programa-aba">
+									<div class="single_service_tab">
+										<div class="row">
+											<div class="head_title" style="margin-bottom: 10px;">
+												<h3 class="font2-3">VILA DA PAZ</h3>
+												<div class="separator"></div>
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-sm-6">
+												<div class="single_tab_content">
+
+													<p style="font-size: 1.24rem;">A vila da Paz está localizada no Km 21 do Anel Rodoviário de Belo Horizonte, entre os bairros Universitário e Santa Cruz, no limite das regionais Pampulha e Noroeste. A vila tem uma área aproximada de 4.900  m² e não possui os serviços públicos de abastecimento de água, esgotos sanitários e energia.</p>
+													<p style="font-size: 1.24rem;">O terreno onde hoje se encontra a vila da Paz teve sua ocupação iniciada em meados da década de 1990. As primeiras moradias foram construídas de maneira mais precária, com lona ou madeirite. Grande parte das famílias veio de bairros de Belo Horizonte (Tupi, Letícia, Caiçara, Marilândia etc). Outra parte veio de municípios da região metropolitana como Santa Luzia, Lagoa Santa, Contagem, Betim etc.</p>
+
+												</div>
+											</div>
+
+											<div class="col-sm-6">
+												<div class="single_tab_img">
+													<img src="assets/images/caracteristicas-imoveis.jpg" alt="" />
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div role="tabpanel" class="tab-pane" id="reassentamento-aba">
+									<div class="single_service_tab">
+										<div class="row">
+											<div class="head_title" style="margin-bottom: 10px;">
+												<h3 class="font2-3">VILA PICA PAU</h3>
+												<div class="separator"></div>
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-sm-6">
+												<div class="single_tab_content">
+
+													<p style="font-size: 1.24rem;">Localizada no bairro Jardim Vitória, região nordeste de Belo Horizonte, a comunidade Pica-Pau surgiu a partir do retalhamento da antiga "Fazenda do Barreiro" e tem em seu entorno 0,40% da população de Belo Horizonte.  A vila possui poucos serviços básicos,  problema agravado pela falta de segurança e precariedade das moradias.</p>
+												</div>
+											</div>
+											<div class="col-sm-6">
+												<div class="single_tab_img">
+													<img src="assets/images/localizacao.jpg" alt="" style="margin-top:20px;" />
+												</div>
+											</div>
+											<!--                                                        <div id="pentagon"></div>-->
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+<section style="display: block; margin-top: 50px; margin-bottom: 50px;" (window:resize)="onResize($event)">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-sm-12">
+				<div id="mapdiv" style="width: 100%; height: 700px;"></div>
 			</div>
 		</div>
 	</div>
