--- a/src/app/pages/home/counter-up/counter-up.component.html
+++ b/src/app/pages/home/counter-up/counter-up.component.html
@@ -8,7 +8,7 @@
 							<div *ngFor="let counter of counters"class="single_counter border_right">
 								<div class="col-sm-3 col-xs-12" style="">
 									<div class="single_counter_item">
-										<h2 class="statistic-counter">{{counter.num}}</h2>
+										<h2 class="count" [attr.data-count]="counter.num">0</h2>
 										<i class="icon icon-thumbs-up"></i>
 										<p class="margin-top-20" style="font-size: 2rem;">{{counter.text}}</p>
 									</div>
