--- a/src/app/pages/news-detail/news-detail.component.html
+++ b/src/app/pages/news-detail/news-detail.component.html
@@ -15,10 +15,15 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12">
-				<div class="head_title" style="margin-top:50px">
-					<h3 style="font-size: 2rem;" >{{news.title}}</h3>
+				<div class="head_title" style="margin-top:50px;margin-bottom:0;">
+					<h3 class="text-center" style="font-size: 2.5rem;line-height: initial;" >{{news.title}}</h3>
 					<div class="separator"></div>
 				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm12 text-center">
+				<h4 style="font-size: 1.8rem;line-height: initial;">{{news.subTitle}}</h4>
 			</div>
 		</div>
 		<div class="row">
@@ -27,26 +32,19 @@
 			</div>
 		</div>
 		<div class="row" style="margin-top:50px; margin-bottom:50px">
-			<div class="col-sm-12">
-				<p style="font-size: 1.24rem;">{{news.text}}</p>
-			</div>
+			<!-- Conteúdo da notícia sendo recebido como html e não como string -->
+			<div id="content-news" class="col-sm-12" [innerHTML]="news.text" style="font-size: 1.24rem!important;"></div>
+			<!-- Fim do conteúdo da notícia -->
 		</div>
 		<div class="row">
-			<div class="col-sm-4" style="margin-top:50px">
-				<a [routerLink]="['/noticias']" class="btn btn-danger">
-					<i class="fa fa-arrow-left" aria-hidden="true"></i>
-					<h3 style="display: inline-block;">Notícias</h3>
-				</a>
-			</div>
-			<div class="col-sm-4 col-sm-offset-1">
+			<div class="col-sm-4">
 				<div class="head_title" style="margin-top:50px">
 					<a class="btn btn-primary" id="show-modal-concilia">
 						<i class="fa fa-info-circle fa-2x" aria-hidden="true"></i>
-						<h3 style="color: white;cursor:pointer;display: inline-block;">
+						<h3 style="color: white;cursor:pointer;display: inline-block; padding: 0;">
 							O concilia
 						</h3>
 					</a>
-
 				</div>
 			</div>
 		</div>
@@ -61,11 +59,7 @@
 			</div>
 			<div class="modal-body">
 				<p style="font-size: 1.24rem;">
-					O Conselho decidiu que, inicialmente, os imóveis selecionados deverão ser divulgados para os beneficiários, que terão um prazo para visitar até três imóveis entre os que atenderem melhor suas necessidades.
-					O Conselho agendou reunião extraordinária para o dia 18 de julho para que a Companhia Urbanizadora e de Habitação de Belo Horizonte (Urbel) apresente mais 36 processos de famílias beneficiárias para apreciação. Foi lavrada ata (clique aqui para ler) para homologação dos requerimentos na Justiça Federal.
-
-					Sobre o Conselho
-					O Conselho Executivo é composto por um representante de cada instituição parceira do Concilia BR-381 e Anel.
+					O Concilia BR-381 e Anel - Programa Judicial de Conciliação para Remoção e Reassentamento Humanizados de Famílias do Anel Rodoviário e BR-381 - foi criado em função da necessidade de revitalização dessas rodovias. É uma iniciativa da Justiça Federal e do Departamento Nacional de Infraestrutura de Transportes (DNIT), em parceria com Ministério Público Federal (MPF), Defensoria Pública da União (DPU), Companhia Urbanizadora e de Habitação de Belo Horizonte (URBEL) e Associação das Comunidades de Moradores de Áreas de Risco de Belo Horizonte (CMAR).
 				</p>
 			</div>
 			<div class="modal-footer">
