--- a/src/styles.css
+++ b/src/styles.css
@@ -184,7 +184,7 @@ h6 {
 }
 p {
     line-height: 2rem;
-    font-size: 0.875rem;
+    /*font-size: 0.875rem;*/
 }
 p:last-child {
     margin-bottom: 0px;
