--- a/src/app/pages/cmar/cmar.component.html
+++ b/src/app/pages/cmar/cmar.component.html
@@ -4,21 +4,27 @@
             <div class="row">
                 <div class="col-sm-12 ">
 					<h1 style="text-align: -webkit-center;">
-						<img src="assets/images/logoconcilia.png" alt="Logo do concilia" style="max-width:60%;margin-top: 150px;">
+						<img src="assets/images/banner_images/Cmar.png" alt="Logo do concilia" style="max-width:60%;margin-top: 150px;">
 					</h1>
 	            </div>
             </div>
         </div>
     </div>
 </section>
-<section id="features" class="features">
+<section id="features" class="features" style="padding-top: 100px;">
     <div class="container">
         <div class="row">
+			<div class="col-sm-12">
+	            <div class="head_title" style="margin-bottom: 25px;">
+	                <h3 style="font-size: 3rem; text-align: center;line-height: initial;">CMAR - COMUNIDADE DE MORADORES <br /> EM ÁREAS DE RISCO</h3>
+	                <div class="separator"></div>
+	            </div>
+	        </div>
             <div class="col-sm-12">
-                <div class="main_features_area sections" style="padding-top:0;padding-bottom:0;">
+                <div class="main_features_area sections" style="padding-top: 25px;padding-bottom: 100px;">
                     <div class="row">
                         <div class="col-sm-6">
-							<img src="assets/images/criterios_regras.jpg" alt="" style="padding-top:10%">
+							<img src="assets/images/cmar001.png" alt="" style="margin-top:5%;">
                         </div><br>
                         <div class="col-sm-6">
                             <p class="font-124">O movimento Comunidade de Moradores em Áreas de Risco (CMAR) se constituiu após a divulgação da notificação de desapropriação dos moradores do Anel Rodoviário de Belo Horizonte em função das obras de revitalização da via.</p>
@@ -33,33 +39,16 @@
 <section id="about" class="about">
 	<div class="container">
 		<div class="row">
-			<div class="main_about_area sections" style="padding-top:0;padding-bottom:0;">
+			<div class="main_about_area sections" style="padding-top: 0;">
 				<div class="col-sm-6">
 					<p class="font-124">Os moradores passaram a se organizar cada vez mais com a adesão de um número crescente de comunidades ao CMAR. Desta forma aumentaram o poder de barganha nas negociações com os órgãos e entidades governamentais.</p>
 					<p class="font-124">As comunidades se reuniram no CMAR por uma causa comum. Todas as lideranças comunitárias buscavam uma soluçao que atendesse o conjunto de todas as famílias atingidas pelas obras de melhoria das rodovias BR-381 e Anel Rodoviário.</p>
+					<p class="font-124">No segundo semestre de 2016, o CMAR contava com a participação das Vila da Paz, Vila da Luz, Vila São José, Madre Gertrudes, Vila Aldeia, Vila Nova Paraíso, Vila Biquinha, Vila da Rua Professor Paixão e Pátio da Estação, no movimento em favor da desapropriação e reassentamento humanizados, consolidado no programa Concilia BR-381 e Anel.</p>
 				</div>
 				<div class="col-sm-6">
-						<img src="assets/images/plano_providencias.jpg" alt="" style="padding-top:10%;max-width: inherit;">
+						<img src="assets/images/cmar002.png" alt="" >
 				</div>
 			</div>
 		</div>
 	</div>
-</section>
-<section id="features" class="features">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="main_features_area sections" style="padding-top:0;padding-bottom:0;">
-                    <div class="row">
-                        <div class="col-sm-6">
-							<img src="assets/images/criterios_regras.jpg" alt="" style="padding-top:10%">
-                        </div><br>
-                        <div class="col-sm-6">
-                            <p class="font-124">No segundo semestre de 2016, o CMAR contava com a participação das Vila da Paz, Vila da Luz, Vila São José, Madre Gertrudes, Vila Aldeia, Vila Nova Paraíso, Vila Biquinha, Vila da Rua Professor Paixão e Pátio da Estação, no movimento em favor da desapropriação e reassentamento humanizados, consolidado no programa Concilia BR-381 e Anel.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 </section>
