--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -89,7 +89,7 @@
 			</div>
 		</div>
 	</footer>
-<a href="#" class="seta-cima"></a>
+<a class="seta-cima"></a>
 <div class="rodape_end_background">
 	<div class="row">
 		<p style="margin-top: 40px;font-weight: bold; color: white;text-align: center;">&copy; Copyright 2017 Concilia BR-381 e Anel</p>
