--- a/src/app/pages/news-detail/news-detail.component.html
+++ b/src/app/pages/news-detail/news-detail.component.html
@@ -16,24 +16,24 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<div class="head_title" style="margin-top:50px;margin-bottom:0;">
-					<h3 class="text-center" style="font-size: 2.5rem;line-height: initial;" >{{news.title}}</h3>
+					<h3 class="text-center" style="font-size: 2.5rem;line-height: initial;" >{{news?.title}}</h3>
 					<div class="separator"></div>
 				</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-sm12 text-center">
-				<h4 style="font-size: 1.8rem;line-height: initial;">{{news.subTitle}}</h4>
+				<h4 style="font-size: 1.8rem;line-height: initial;">{{news?.subTitle}}</h4>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-sm-12">
-				<img src="{{news.image}}" alt="">
+				<img src="{{news?.image}}" alt="">
 			</div>
 		</div>
 		<div class="row" style="margin-top:50px; margin-bottom:50px">
 			<!-- Conteúdo da notícia sendo recebido como html e não como string -->
-			<div id="content-news" class="col-sm-12" [innerHTML]="news.text" style="font-size: 1.24rem!important;"></div>
+			<div id="content-news" class="col-sm-12" [innerHTML]="news?.text" style="font-size: 1.24rem!important;"></div>
 			<!-- Fim do conteúdo da notícia -->
 		</div>
 		<div class="row">
