Inserção do serviço de comunidades

--- a/src/app/pages/community-detail/community-detail.component.html
+++ b/src/app/pages/community-detail/community-detail.component.html
@@ -1,3 +1,16 @@
+<section id="home" class="home">
+    <div class="overlay overlay-min">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 ">
+					<h1 style="text-align: -webkit-center;">
+						<img src="assets/images/banner_images/Cmar.png" alt="Logo do concilia" style="max-width:60%;margin-top: 150px;">
+					</h1>
+	            </div>
+            </div>
+        </div>
+    </div>
+</section>
 <p>
   community-detail works!
 </p>
