--- a/src/app/pages/communyts/communyts.component.html
+++ b/src/app/pages/communyts/communyts.component.html
@@ -11,6 +11,7 @@
         </div>
     </div>
 </section>
+<div class="separator"></div>
 <section style="display: block; margin-bottom: 50px;" (window:resize)="onResize($event)">
 	<div class="container-fluid">
 		<div class="row">
